test/libyul/yulSyntaxTests/opcode_for_function_args_2.yul
{
	function f() -> gas {}
}
// ----
// ParserError 5568: (19-22='gas'): Cannot use builtin function name "gas" as identifier name.
